--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "test": "jest --config=jest.config.js --coverage"
   },
   "dependencies": {
     "parcel-bundler": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "@babel/preset-typescript": "^7.25.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "4.4.4"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "keywords": []
+  "keywords": [],
+  "jest": {
+    "testEnvironment": "jsdom"
+  }
 }
